<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jurai</groupId>
    <artifactId>JurAI</artifactId>
    <version>0.0.1</version>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <pluginRepositories>
    </pluginRepositories>

    <properties>
        <native.maven.plugin.version>0.9.12</native.maven.plugin.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>22</javafx.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <mainClass>com.jurai.App</mainClass>
        <buildDirectory>${project.basedir}/target</buildDirectory>
        <jpackageInputDir>${buildDirectory}/image</jpackageInputDir>
        <jpackageOutputDir>${buildDirectory}/jpackage_outputdir</jpackageOutputDir>
        <appModule>${project.basedir}</appModule>
        <resDirectory>${project.basedir}/src/main/resources</resDirectory>
        <mainJar>${buildDirectory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</mainJar>
    </properties>

    <dependencies>
        <!-- javafx base -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>22.0.1</version>
        </dependency>

        <!-- javafx extensions -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>


        <!-- junit dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>

        <!-- json and request dependencies -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>

        <!-- dependency to get home folder paths -->
        <dependency>
            <groupId>net.harawata</groupId>
            <artifactId>appdirs</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.36</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.36</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Plugin to run program via maven -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.jurai.App</mainClass>
                    <arguments>
                        <argument>--add-opens javafx.controls/javafx.scene.control.skin=jurai</argument>
                    </arguments>
                </configuration>
            </plugin>

            <!-- Plugin to create modularized image -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>

                <configuration>
                    <noHeaderFiles>true</noHeaderFiles>
                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <mainClass>com.jurai.App</mainClass>
                    <launcher>JurAI</launcher>
                    <jlinkImageName>JurAI</jlinkImageName>
                    <jmodsPath>
                        <!-- Include the modularized JARs generated by Moditect -->
                        ${project.build.directory}/modded-libs
                        <!-- Include other dependencies and the JDK -->
                        ${project.build.directory}/jmods
                    </jmodsPath>
                </configuration>
            </plugin>

            <!-- Plugins to compile project -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.jurai.Launcher</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- Plugin to create JAR files -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.jurai.App</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Plugin to create JPackage directories -->
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>create-dirs</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="target/dist"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- JPackage -->
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.5</version>

                <configuration>
                    <name>JurAI</name>
                    <appVersion>0.0.1</appVersion>
                    <vendor>com.jurai</vendor>
                    <destination>target/dist</destination>
                    <module>jurai/com.jurai.App</module>
                    <runtimeImage>target/JurAI</runtimeImage>
                    <icon>${project.basedir}/src/main/resources/img/icon.png</icon>
                    <javaOptions>
                        <option>-Dfile.encoding=UTF-8</option>
                        <!-- <option>-add-opens javafx.controls/javafx.scene.control.skin=jurai</option> -->
                    </javaOptions>
                </configuration>

                <!-- OS specific configurations -->
                <executions>
                    <execution>
                        <id>mac</id>
                        <configuration>
                            <type>PKG</type>
                        </configuration>
                    </execution>
                    <execution>
                        <id>win</id>
                        <configuration>
                            <type>MSI</type>
                            <winMenu>true</winMenu>
                        </configuration>
                    </execution>
                    <execution>
                        <id>linux_appimage</id>
                        <configuration>
                            <type>APP_IMAGE</type>
                        </configuration>
                    </execution>
                    <execution>
                        <id>linux_deb</id>
                        <configuration>
                            <type>DEB</type>
                            <linuxShortcut>true</linuxShortcut>
                            <linuxPackageName>jurai</linuxPackageName>
                            <linuxAppCategory>Utilities</linuxAppCategory>
                            <linuxMenuGroup>Utilities</linuxMenuGroup>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- other plugins -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.extensions</groupId>
                <artifactId>maven-build-cache-extension</artifactId>
                <version>1.2.0</version>
            </extension>
        </extensions>
    </build>
</project>
